tests/wifi/server/Test-results.txt

Serial output:

[V][WiFiGeneric.cpp:268] _arduino_event_cb(): STA Started
[D][WiFiGeneric.cpp:789] _eventCallback(): Arduino Event: 2 - STA_START
[V][WiFiGeneric.cpp:280] _arduino_event_cb(): STA Connected: SSID: KabelBox-A210,
 BSSID: f4:6b:ef:da:a2:15, Channel: 11, Auth: WPA2_PSK
[D][WiFiGeneric.cpp:789] _eventCallback(): Arduino Event: 4 - STA_CONNECTED
[D][WiFiGeneric.cpp:789] _eventCallback(): Arduino Event: 7 - STA_GOT_IP
[D][WiFiGeneric.cpp:838] _eventCallback(): STA IP: 192.168.0.138, 
MASK: 255.255.255.0, GW: 192.168.0.1

Expected behaviour:
MDNS working doing a ping from my linux command line that has mDns 
ping espressif.local
PING espressif.local (192.168.0.121)

Server seems to be working. I did got a response from S2. But I see some irregular behaviour
[V][WebServer.cpp:286] handleClient(): New client
[V][Parsing.cpp:113] _parseRequest(): method: GET url: / search: 
[V][Parsing.cpp:219] _parseRequest(): headerName: Host
[V][Parsing.cpp:220] _parseRequest(): headerValue: 192.168.0.138
[V][Parsing.cpp:219] _parseRequest(): headerName: Connection
[V][Parsing.cpp:220] _parseRequest(): headerValue: keep-alive
[V][Parsing.cpp:219] _parseRequest(): headerName: Cache-Control
[V][Parsing.cpp:220] _parseRequest(): headerValue: max-age=0
[V][Parsing.cpp:219] _parseRequest(): headerName: Upgrade-Insecure-Requests
[V][Parsing.cpp:220] _parseRequest(): headerValue: 1
[V][Parsing.cpp:219] _parseRequest(): headerName: User-Agent
[V][Parsing.cpp:220] _parseRequest(): headerValue: Mozilla/5.0 (X11; Linux x86_64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/81.0.4044.138 Safari/537.36
[V][Parsing.cpp:219] _parseRequest(): headerName: Accept
[V][Parsing.cpp:220] _parseRequest(): headerValue: text/html,application/xhtml+xml,application/xml;q=0.9,image/webp,image/apng,*/*;q=0.8,application/signed-exchange;v=b3;q=0.9
[V][Parsing.cpp:219] _parseRequest(): headerName: Accept-Encoding
[V][Parsing.cpp:220] _parseRequest(): headerValue: gzip, deflate
[V][Parsing.cpp:219] _parseRequest(): headerName: Accept-Language
[V][Parsing.cpp:220] _parseRequest(): headerValue: es,de;q=0.9,en-GB;q=0.8,en;q=0.7,fr;q=0.6,pl;q=0.5
[V][Parsing.cpp:247] _parseArguments(): args: 
[V][Parsing.cpp:230] _parseRequest(): Request: /
[V][Parsing.cpp:231] _parseRequest():  Arguments: 
[E][WebServer.cpp:617] _handleRequest(): request handler not found


ESP32S2 behaviour:
Mdns: Does not seem to work - Now it's working, needs some seconds to resolve, check mdns example
$ ping espressif.local
ping: espressif.local: Name or service not known
Server is working correctly!
espressif.local does not get resolved to an IP address.

Remarks:
WiFi.event seems not to be the same.
 note: candidate: 'wifi_event_id_t WiFiGenericClass::onEvent(WiFiEventSysCb, arduino_event_id_t)'
     wifi_event_id_t onEvent(WiFiEventSysCb cbEvent, arduino_event_id_t event = ARDUINO_EVENT_MAX);
                     ^~~~~~~
/home/martin/.platformio/packages/framework-arduinoespressif32@src-52fb1101098f90af42f8b3be28f19126/libraries/WiFi/src/WiFiGeneric.h:147:21: note:   no known conversion for argument 2 from 'system_event_id_t' to 'arduino_event_id_t'
tests/wifi/server/main.cpp:71:54: error: no matching function for call to 'WiFiClass::onEvent(void (&)(system_event_id_t), system_event_id_t)'
   WiFi.onEvent(lostCon, SYSTEM_EVENT_STA_DISCONNECTED);
                                                      ^
In file included from /home/martin/.platformio/packages/framework-arduinoespressif32@src-52fb1101098f90af42f8b3be28f19126/libraries/WiFi/src/WiFiSTA.h:28,
                 from /home/martin/.platformio/packages/framework-arduinoespressif32@src-52fb1101098f90af42f8b3be28f19126/libraries/WiFi/src/WiFi.h:32,
                 from tests/wifi/server/main.cpp:3:
/home/martin/.platformio/packages/framework-arduinoespressif32@src-52fb1101098f90af42f8b3be28f19126/libraries/WiFi/src/WiFiGeneric.h:145:21: note: candidate: 'wifi_event_id_t WiFiGenericClass::onEvent(WiFiEventCb, arduino_event_id_t)'


